# termio-video-in-terminal

./: .gitignore  Cargo.toml  README.md
examples/: list_devices.rs
src/: ascii.rs  client.rs  main.rs  message.rs  server.rs  ui.rs  user.rs  webcam.rs
