[package]
name = "termio"
version = "0.1.0"
edition = "2021"

[dependencies]
# Terminal UI
ratatui = "0.29"
crossterm = "0.28"
tachyonfx = "0.16"

# WebSocket Server
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = "0.23"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Video/Webcam
ffmpeg-next = "8.0"
ffmpeg-sys-next = "8.0"

# Threading & Concurrency
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Error Handling & Utilities
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
[[bin]]
name = "termio-server"
path = "src/main.rs"
